k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastify-service
spec:
  selector:
    app: fastify-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
